# am_emulator

./: .gitignore  PROJECT_STATUS.md  am1200_emulator_spec.md  diag_amosl_mon.py  diag_boot_sectors.py  diag_dispatch.py  diag_dispatch2.py  diag_dispatch3.py  diag_dispatch4.py  diag_dispatch5.py  diag_driver_code.py  diag_driver_size.py  diag_driver_trace.py  diag_extract_driver.py  diag_filesystem.py  diag_find_driver.py  diag_hd0_boot.py  diag_mount_trace.py  diag_overflow_subs.py  diag_sasi_poll.py  diag_system_vars.py  disasm_srch.py  find_amosl.py  main.py  patch_driver.py  patch_driver_v2.py  patch_driver_v3.py  patch_driver_v4.py  patch_driver_v5.py  patch_driver_v6.py  patch_driver_v7.py  pyproject.toml  resume_note.md  test_68000_frames.py  test_long_order.py  test_ram_clear_fix.py  test_ram_clear_fix2.py  trace_68000_handler.py  trace_aline_dispatch.py  trace_boot_reads.py  (+30 more)
alphasim/: __init__.py  __main__.py  config.py  main.py
alphasim/bus/: memory_bus.py
alphasim/cpu/: accelerators.py  addressing.py  disassemble.py  exceptions.py  instructions.py  mc68010.py  opcodes.py
alphasim/debug/: trace.py
alphasim/devices/: acia6850.py  base.py  config_dip.py  disk_driver.py  led.py  primary_serial_setup.py  ram.py  rom.py  rtc_direct_bank.py  rtc_msm5832.py  rtc_shared.py  sasi.py  scsi_bus.py  serial_driver.py  timer6840.py  timer8253.py
alphasim/storage/: amos_fs.py  disk_image.py  scsi_target.py
docs/: AMOS_DIS_BOOTROM_SPEC.md  BOOT-SERIAL-FINDINGS.md  HANDOFF-2026-03-07.md  HANDOFF-2026-03-09.md  HANDOFF-2026-03-10.md  SELF-TEST.md
tests/: conftest.py
(+29 files in other folders)
