[project]
name = "alphasim"
version = "0.1.0"
description = "Alpha Microsystems AM-1200 system emulator"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
alphasim = "alphasim.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["alphasim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
